# sili-vengers

./: .gitignore  README.md  pyproject.toml
sili_vengers/: cli.py
sili_vengers/agents/: definitions.py
sili_vengers/claude_commands/: definitions.py
sili_vengers/commands/: agents_cmd.py  crew_cmd.py  init_cmd.py  log_cmd.py  resume_cmd.py  start_cmd.py  status_cmd.py  stop_cmd.py  task_cmd.py
sili_vengers/core/: discussion.py  executor.py  runner.py  state.py
sili_vengers/hooks/: definitions.py
